--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ body {
     display: inline-flex;
     background-size: contain;
     vertical-align: middle;
-    fill: #757575;
+    fill: currentColor;
     
 
 
@@ -254,11 +254,6 @@ url(../images/hero-img.jpg);
 
     margin-top: 0;
     margin-bottom: 30px;
- 
-    
-
-    
-
 
     color: var(--additional-white-color);
     font-style: normal;;
@@ -485,29 +480,33 @@ url(../images/hero-img.jpg);
 
 
 .social-list {    
+    margin-right: 10px; 
+    width: 44px;
+    height: 44px;
+}
+
+.soc {
+
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 10px;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;    
-
-}
-.social-link{
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+   
     fill: #afb1b8;
-
 }
 
-.social-link:hover {
+.soc:hover,
+.soc:focus {
     fill: #FFFFFF;
-
-}
-
-.social-list:hover {
     background-color: var(--accent-color);
-    fill: #FFFFFF;
+    border-radius: 50%;
 }
+
+
+
+
 
 
 
@@ -524,15 +523,11 @@ url(../images/hero-img.jpg);
 }
 
 .clients-list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
     margin-right: 30px;
     width: 170px;
     height: 92px;
-    border: 1px solid #AFB1B8;
-    box-sizing: border-box;
-    border-radius: 4px;
+
 
 }
 
@@ -541,19 +536,26 @@ url(../images/hero-img.jpg);
 
 } 
 
-.client-one {
+.clients-link {
+    width: 100%;
+    height: 100%;   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #AFB1B8;
+    box-sizing: border-box;
+    border-radius: 4px;
     fill: #afb1b8;
 }
 
-.clients-list:hover{
+
+.clients-link:hover,
+.clients-link:focus{
     border-color: var(--accent-color);
-
-}
-
-.client-one:hover{
     fill: var(--accent-color);
-    
 }
+
+
 
 /* footer */
 .footer {
@@ -643,6 +645,17 @@ url(../images/hero-img.jpg);
 }
 
 
+.soc-footer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+
+}
+
 
 .social-footer-list:last-child {
     margin-right: 0;
@@ -650,14 +663,8 @@ url(../images/hero-img.jpg);
 
 .social-footer-list {
     margin-right: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: 44px;
     height: 44px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 50%;
-
 }
 
 
@@ -671,8 +678,9 @@ url(../images/hero-img.jpg);
 
 }
 
-.social-footer-list:hover {
-background-color: #2196F3
+.soc-footer:hover,
+.soc-footer:focus {
+background-color:var(--accent-color);
     
 }
 
@@ -717,6 +725,8 @@ background-color: #2196F3
 .current-active {
     background-color: var(--accent-color);
     color: var(--additional-white-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
 }
 
 .btn:hover,
@@ -724,8 +734,10 @@ background-color: #2196F3
     background-color: var(--accent-color);
     color: var(--additional-white-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
+    border-radius: 4px;
+
 }
+
 
 
 .pointer {
@@ -758,18 +770,13 @@ border-radius: 4px;
 
 .bg-card {
 
-    width: calc((100% - 60px) / 3);
-
-    
+    width: calc((100% - 60px) / 3);   
     box-sizing: border-box;
     margin-right: 30px;
     margin-bottom: 30px;
 }
 
-.bg-card:hover{
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 
-}
 
 .bg-card:nth-child(3n) {
     margin-right: 0;
@@ -781,8 +788,16 @@ border-radius: 4px;
 
 .portfolio-list {
     text-decoration: none;
+    display: block;
+    
 
     
+}
+
+.portfolio-list:hover,
+.portfolio-list:focus{
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 
 .work-card {
