--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,9 @@ body {
     text-align: center;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
+    width: 1600px;
+    margin: 0 auto;
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4),
@@ -335,7 +337,7 @@ url(../images/hero-img.jpg);
     padding-bottom: 25px;
     display: flex;
     justify-content: center;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
     border-radius: 4px;
     margin-bottom: 30px;
     background-position: center;
@@ -354,6 +356,7 @@ url(../images/hero-img.jpg);
 /* SECTION */
 .section-work {
     padding-top: 0;
+
     padding-bottom: 94px;
 }
 
@@ -418,6 +421,9 @@ url(../images/hero-img.jpg);
 
 .team-img {
     margin-top: 0;
+    display: block;
+    max-width: 100%;
+    height: auto;
 
 }
 
@@ -462,6 +468,7 @@ url(../images/hero-img.jpg);
 .section-team {
 
     background-color: var(--background-team-color);
+    padding-top: 94px;
     padding-bottom: 94px;
 }
 
@@ -513,6 +520,7 @@ url(../images/hero-img.jpg);
 .section-clients {
     
     padding-top: 0;
+    padding-top: 94px;
     padding-bottom: 94px;
 }
 
@@ -520,6 +528,7 @@ url(../images/hero-img.jpg);
     display: flex;
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 
 .clients-list {
